# simple_DSP

./: .gitignore  .gitlab-ci.yml  CBaseMdb.hpp  Makefile  Makefile.am  Makefile.in  ad_map.cpp  ad_map.h  ad_model.h  ad_op.cpp  ad_register.cpp  ad_request.cpp  adstat.cpp  advertisement.xml  ap_signal_dock.cpp  ap_signal_receiver  ap_signal_receiver.cpp  ap_signal_sender.cpp  config.h  config.h.in  config.ini  config.status  configure  configure.ac  configure.scan  cron_timing.cpp  cron_timing.h  db_map.cpp  db_map.h  generate_message_file.py  init_data.cpp  init_data.h  loadConf.cpp  loadConf.h  package.json  redisDB.hpp  redis_db_test  redis_op.cpp  reinstall.sh  restart_fastcgi.sh  (+15 more)
.deps/: ad_map.Po  ad_op.Po  ap_signal_receiver.Po  cron_timing.Po  robot_commander.Po  user_map.Po  user_op.Po  user_tag_receiver.Po
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
etc/: config.ini
module/robot/: command.js  config.js  robot.js
module/web/: ad_register.html  ad_request.html  realtime_map.html  route_map.html
test/: CbaseMdb_test.cpp  Makefile  Makefile.am  Makefile.in  ad_map.test.js  ad_map_test.cpp  get_user_id.cpp  redis_test.cpp  redisclass_test.cpp  user_map_test.cpp  user_tag_update.cpp
test/.deps/: ad_map_test.Po  get_user_id.Po  user_map_test.Po  user_tag_update.Po
