#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([simle_DSP], [0.0.1], [caster_zeng@wushuu.com])
AC_CONFIG_SRCDIR([adstat.cpp])
AC_CONFIG_HEADERS([config.h])



AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PREFIX_DEFAULT([/usr/local/nginx/simple_DSP_cgi])
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([fcgi_config.h])
AC_CHECK_HEADERS([uriparser/Uri.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
